# aoc-2016

aoc-day01/: aoc-day01.cabal
aoc-day01/app/: Main.hs
aoc-day01/src/: AocDay01.hs
aoc-day01/test/: AocDay01Spec.hs
aoc-day02/: LICENSE  aoc-day02.cabal
aoc-day02/app/: Main.hs
aoc-day02/src/: AocDay02.hs  AocDay02Part1.hs  AocDay02Part2.hs
aoc-day02/test/: AocDay02Part1Spec.hs  AocDay02Part2Spec.hs  AocDay02Spec.hs
aoc-day03/: aoc-day03.cabal
aoc-day03/app/: Main.hs
aoc-day03/src/: AocDay03.hs
aoc-day03/test/: AocDay03Spec.hs
aoc-day04/: aoc-day04.cabal  decrypted.txt
aoc-day04/app/: Main.hs
aoc-day04/src/: AocDay04.hs
aoc-day04/test/: AocDay04Spec.hs
aoc-day05/: aoc-day05.cabal
aoc-day05/app/: Main.hs
aoc-day05/src/: AocDay05.hs
aoc-day05/test/: AocDay05Spec.hs
aoc-day06/: aoc-day06.cabal  stack.yaml
aoc-day06/app/: Main.hs
aoc-day06/src/: AocDay06.hs
aoc-day06/test/: AocDay06Spec.hs
aoc-day07/: aoc-day07.cabal
aoc-day07/app/: Main.hs
aoc-day07/src/: AocDay07.hs
aoc-day07/test/: AocDay07Spec.hs
