name:                aoc-day01
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sethetter/aoc-day01#readme
license:             BSD3
license-file:        LICENSE
author:              Seth Etter
maintainer:          sethetter@gmail.com
copyright:           MIT
category:            haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AocDay01
  build-depends:       base >= 4.7 && < 5
                     , split
  default-language:    Haskell2010

executable aoc-day01-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc-day01
                     , split
  default-language:    Haskell2010

test-suite aoc-day01-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aoc-day01
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sethetter/aoc-day01
