name:                aoc-day02
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/sethetter/aoc-day02#readme
license:             BSD3
license-file:        LICENSE
author:              Seth Etter
maintainer:          sethetter@gmail.com
copyright:           MIT
category:            haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AocDay02Part1
                     , AocDay02Part2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable aoc-day02
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aoc-day02
                     , split
  default-language:    Haskell2010

test-suite aoc-day02-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aoc-day02
                     , hspec
                     , QuickCheck
                     , split
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sethetter/aoc-day02
